--- a/src/styles/pages/landing/_landing.scss
+++ b/src/styles/pages/landing/_landing.scss
@@ -254,6 +254,51 @@ $font-family-secondary: 'Roboto', sans-serif;
         text-align: center;
     }
 
+    .landing-review-summary {
+        text-align: center;
+        margin-block: 1rem;
+
+        .average-rating-number {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: $color-text;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            span {
+                margin-right: 0.5rem;
+            }
+
+            @media (max-width: 768px) {
+                font-size: 1.05rem;
+
+            }
+
+            @media (max-width: 480px) {
+                font-size: 1rem;
+            }
+        }
+
+        h3 {
+            font-size: 1rem;
+            font-weight: 500;
+            color: $color-text;
+            margin-bottom: 0.5rem;
+
+            @media (max-width: 768px) {
+                font-size: 0.9rem;
+            }
+
+            @media (max-width: 480px) {
+                font-size: 0.85rem;
+            }
+        }
+
+
+    }
+
     .landing-review-list {
         display: flex;
         flex-wrap: wrap;
