--- a/src/styles/pages/cart/_checkout.scss
+++ b/src/styles/pages/cart/_checkout.scss
@@ -1,11 +1,12 @@
 @use "../../base/colors" as colors;
 
-.checkout-wrapper{
+.checkout-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .checkout-page {
   max-width: 500px;
   margin: 2rem;
@@ -54,9 +55,9 @@
       }
 
       .checkout-item-info {
-       display: flex;
-       flex-direction: column;
-       justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
         .item-name {
           font-weight: 600;
@@ -187,6 +188,8 @@
   text-align: center;
   transition: all 0.2s ease-in-out;
 
+
+
   i {
     font-size: 1.4rem;
     margin-bottom: 0.4rem;
@@ -208,8 +211,14 @@
 
   &.active {
     border-color: colors.$ligth-green;
-    background-color: colors.$grey
+    background-color: #bfcfbd79
   }
+}
+
+.payment-card.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed !important;
 }
 
 /* ===== Responsive ===== */
