--- a/src/styles/pages/cart/_checkout.scss
+++ b/src/styles/pages/cart/_checkout.scss
@@ -5,14 +5,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: colors.$grey;
 }
 
 .checkout-page {
   max-width: 500px;
   margin: 2rem;
-  background: colors.$grey;
-  padding: 2.5rem 2rem;
-  border-radius: 12px;
+  background: colors.$white;
+  padding: 3rem 2rem;
   box-shadow: 0 6px 18px rgba(39, 39, 39, 0.3);
 
   h2 {
@@ -150,7 +150,6 @@
     font-size: 1.05rem;
     font-weight: 600;
     border: none;
-    border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.25s ease;
 
@@ -187,8 +186,6 @@
   cursor: pointer;
   text-align: center;
   transition: all 0.2s ease-in-out;
-
-
 
   i {
     font-size: 1.4rem;
@@ -247,4 +244,74 @@
       font-size: 0.75rem;
     }
   }
+}
+
+@media (max-width: 480px) {
+.checkout-page {
+  padding: 3rem 1.5rem;
+
+  h2 {
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+  }
+
+  .checkout-list {
+    margin-bottom: 1rem;
+  }
+
+  .checkout-total {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  /* Secciones */
+  .checkout-section {
+    margin: 1rem 0;
+
+    h3 {
+      font-size: 1rem;
+    }
+
+    input[type="text"],
+    input[type="tel"],
+    select.select-input {
+      padding: 0.5rem 0.75rem;
+      margin-top: 0.2rem;
+      margin-bottom: 0.8rem;
+      font-size: 0.9rem;
+    }
+
+    select.select-input {
+      appearance: none;
+      background-image: url("data:image/svg+xml,%3Csvg fill='none' stroke='gray' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19 9l-7 7-7-7'%3E%3C/path%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: right 1rem center;
+      background-size: 1rem;
+    }
+  }
+
+  .finish-btn {
+    padding: 0.7rem;
+    font-size: 0.95rem;
+    font-weight: 600;
+  }
+
+  a {
+    font-size: 0.8rem;
+  }
+}
+
+.payment-card {
+  padding: 0.75rem;
+  i {
+    font-size: 1.2rem;
+  }
+
+  span {
+    font-size: 0.7rem;
+    line-height: 1;
+  }
+
+}
+
 }
