--- a/src/styles/pages/cart/_checkout.scss
+++ b/src/styles/pages/cart/_checkout.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: colors.$grey;
+  background-color: #9e9e9e79;
 }
 
 .checkout-page {
