--- a/src/styles/pages/review/_reviewPage.scss
+++ b/src/styles/pages/review/_reviewPage.scss
@@ -3,7 +3,7 @@
 .review-container {
   height: 100vh;
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   padding: 1rem;
   padding-top: 5vh;
